--- a/app/src/main/res/layout/activity_ventana_tickets.xml
+++ b/app/src/main/res/layout/activity_ventana_tickets.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="16sp"
     android:orientation="vertical"
-    tools:context=".eventdata.VentanaTickets">
+    tools:context=".ventanas.VentanaTickets">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,18 +33,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0sp"
-                android:layout_weight="0.6">
+                android:layout_weight="0.6"
+                android:gravity="center">
 
-                <TextView
-                    android:layout_width="match_parent"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/listadoUsuarios"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="CONTENIDO"
-                    android:textSize="35sp"
-                    android:gravity="center">
+                    android:layout_gravity="center_horizontal">
 
-                </TextView>
-
-
+                </androidx.recyclerview.widget.RecyclerView>
 
             </LinearLayout>
             <LinearLayout
@@ -60,7 +58,7 @@
                     android:layout_height="60dp"
                     android:background="@drawable/custom_button"
                     android:layout_marginBottom="36dp"
-                    android:text="Atras" />
+                    android:text="Volver" />
 
             </LinearLayout>
 
