--- a/app/src/main/res/layout/activity_ventana_tickets.xml
+++ b/app/src/main/res/layout/activity_ventana_tickets.xml
@@ -43,6 +43,14 @@
                     android:layout_gravity="center_horizontal">
 
                 </androidx.recyclerview.widget.RecyclerView>
+                <TextView
+                    android:id="@+id/txtFeedVacio"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="No hay reportes de momento! (Que alivio)"
+                    android:visibility="gone">
+                </TextView>
 
             </LinearLayout>
             <LinearLayout
