--- a/app/src/main/res/layout/activity_gestionar_eventos_org.xml
+++ b/app/src/main/res/layout/activity_gestionar_eventos_org.xml
@@ -47,6 +47,15 @@
                 android:layout_gravity="center_horizontal">
 
             </androidx.recyclerview.widget.RecyclerView>
+            <TextView
+                android:id="@+id/txtFeedVacio"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Aquí aparecen tus eventos! Crea uno para que todos te encuentren!"
+                android:visibility="gone">
+
+            </TextView>
 
 
         </LinearLayout>
