--- a/app/src/main/res/layout/activity_usuarios_sol_adm.xml
+++ b/app/src/main/res/layout/activity_usuarios_sol_adm.xml
@@ -55,6 +55,15 @@
 
             </androidx.recyclerview.widget.RecyclerView>
 
+            <TextView
+                android:id="@+id/txtFeedVacio"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="No se han encontrado organizadores en solicitud."
+                android:visibility="gone">
+            </TextView>
+
 
         </LinearLayout>
 
