--- a/app/src/main/res/layout/activity_feed_asistente.xml
+++ b/app/src/main/res/layout/activity_feed_asistente.xml
@@ -18,20 +18,17 @@
             android:layout_width="match_parent"
             android:layout_height="0sp"
             android:layout_marginBottom="10sp"
-            android:layout_weight="0.03"
+            android:layout_weight="0.08"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="150sp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="10sp"
-                android:text="FEED">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Ultimos Eventos"
+                android:textSize="40sp">
 
             </TextView>
-
-            <Spinner
-                android:layout_width="200sp"
-                android:layout_height="match_parent"></Spinner>
 
         </LinearLayout>
         <LinearLayout
