--- a/app/src/main/res/layout/activity_gestionar_eventos_org.xml
+++ b/app/src/main/res/layout/activity_gestionar_eventos_org.xml
@@ -22,16 +22,12 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="150sp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="10sp"
-                android:text="FEED">
-
+                android:text="Mis Eventos"
+                android:textSize="35sp"
+                android:gravity="center">
             </TextView>
-
-            <Spinner
-                android:layout_width="200sp"
-                android:layout_height="match_parent"></Spinner>
 
         </LinearLayout>
         <LinearLayout
